src/objects/Assessment_Domain_Result__c.object
<CustomObject>
    <description>ASSESSMENT</description>
    <fields>
        <fullName>Answered_Questions__c</fullName>
        <label>Answered Questions</label>
        <summaryFilterItems>
            <field>Assessment_Response__c.Rating__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Assessment_Response__c.Assessment_Domain_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assessment_Domain__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Assessment Domain</label>
        <referenceTo>Assessment_Domain__c</referenceTo>
        <relationshipLabel>Assessment Domain Results</relationshipLabel>
        <relationshipName>Assessment_Domain_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment_Type__c</fullName>
        <formula>Assessment_Domain__r.Assessment_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Assessment Domain Results</relationshipLabel>
        <relationshipName>Assessment_Domain_Results_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <summarizedField>Assessment_Response__c.Score__c</summarizedField>
        <summaryForeignKey>Assessment_Response__c.Assessment_Domain_Result__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <formula>Assessment_Domain__r.Sort_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Assessment_Domain__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Answered_Questions__c</fullName>
        <label>Total Answered Questions</label>
        <summaryFilterItems>
            <field>Assessment_Response__c.Rating__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Assessment_Response__c.Assessment_Domain_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Questions__c</fullName>
        <label>Total Questions</label>
        <summaryForeignKey>Assessment_Response__c.Assessment_Domain_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Assessment Domain Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assessment_Domain__c</columns>
        <columns>Assessment_Type__c</columns>
        <columns>Assessment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assessment Domain Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Domain Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>